# cmake-examples

./: README.md
cmake_basic/: CMakeLists.txt  helloworld.c
cmake_sub_dir/: CMakeLists.txt  README.md
cmake_sub_dir/Hello/: CMakeLists.txt  hello.cc  hello.h
cmake_sub_dir/Test/: CMakeLists.txt  test.cc
